fix(style): home page navigation

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a href=" ../index.html">
             <h3>Polaroid</h3>
         </a>
-        <ul class="lists flex-row items-center font-bold">
+        <ul class="ml-auto flex-row items-center font-bold">
             <li class="ml-4">
                 <a href="https://github.com/rohanmathur91" target="_blank"><i class="fa fa-github social-icons"></i></a>
             </li>
