fix(style): content overflow issue

--- a/documentation/index.html
+++ b/documentation/index.html
@@ -20,7 +20,7 @@
             <a class="logo" href="../index.html">
                 <h3>Polaroid</h3>
             </a>
-            <div class="menu hide"><i class="fa fa-bars"></i></div>
+            <button class="menu hide"><i class="fa fa-bars"></i></button>
             <ul class="ml-auto flex-row items-center font-bold">
                 <li class="ml-4">
                     <a href="https://github.com/rohanmathur91" target="_blank"><i
@@ -39,7 +39,7 @@
         <aside class="sidebar">
             <div class="sidebar-title hide flex-row content-space-between py-2 px-2">
                 <a class="ml-4 invert text-regular font-bold" href="../index.html">Polaroid</a>
-                <span class="ml-auto close hide transition-3"><i class="fa fa-times"></i></span>
+                <button class="ml-auto close hide transition-3"><i class="fa fa-times"></i></button>
             </div>
             <ul class="mt-3">
                 <li class="py-1 px-2 m-1 ml-4 list-item">
