refactor: card with shadow

--- a/documentation/index.html
+++ b/documentation/index.html
@@ -498,7 +498,7 @@
 
                     <div class="snippet rounded-sm p-3 flex-row flex-center wrap my-1 border">
                         <!-- card with badge -->
-                        <div class="card vertical-card flex-column relative transition-2 mr-1 my-2">
+                        <div class="card card-shadow vertical-card flex-column relative transition-2 mr-1 my-2">
                             <span class="card-badge text-base font-semibold absolute top-1 left-1 rounded-sm">New</span>
                             <div>
                                 <img src="../assets/jacket.jpg" alt="avatar" />
@@ -513,7 +513,7 @@
                         </div>
 
                         <!-- card with favourite badge -->
-                        <div class="card vertical-card flex-column relative transition-2 mr-1 my-2">
+                        <div class="card card-shadow vertical-card flex-column relative transition-2 mr-1 my-2">
                             <span
                                 class="card-badge-bg absolute text-base top-1 right-1 rounded-full flex-row flex-center pointer">
                                 <i class="fa fa-heart-o"></i>
@@ -531,7 +531,7 @@
                         </div>
 
                         <!-- card with dismiss -->
-                        <div class="card vertical-card flex-column relative transition-2 mr-1 my-2">
+                        <div class="card card-shadow vertical-card flex-column relative transition-2 mr-1 my-2">
                             <span
                                 class="card-badge-bg absolute text-base top-1 right-1 rounded-full flex-row flex-center pointer">
                                 <i class="fa fa-close"></i>
@@ -564,7 +564,7 @@
                     <!-- card with text overlay and text only cards-->
                     <p class="mt-2">Card with text overlay and text only cards.</p>
                     <div class="snippet rounded-sm p-3 flex-row items-start wrap content-center my-1 border">
-                        <div class="card vertical-card flex-column relative transition-2 m-1">
+                        <div class="card card-shadow vertical-card flex-column relative transition-2 m-1">
                             <div class="relative">
                                 <img src="../assets/jacket.jpg" alt="avatar" />
                                 <p class="p-2 overlay black w-100 font-bold text-center">
@@ -581,7 +581,7 @@
                         </div>
 
                         <!-- text only card -->
-                        <div class="card vertical-card flex-column relative m-1">
+                        <div class="card card-shadow vertical-card flex-column relative m-1">
                             <div class="p-2">
                                 <h3>Jacket</h3>
                                 <p class="black mt-1">
@@ -608,7 +608,7 @@
                     <!-- horizontal cards-->
                     <p class="mt-2">Horizontal cards.</p>
                     <div class="snippet rounded-sm p-3 flex-row items-start content-center my-1 border">
-                        <div class="card flex-row horizontal-card transition-2">
+                        <div class="card card-shadow flex-row horizontal-card transition-2">
                             <div class="w-30">
                                 <img src="../assets/jacket.jpg" alt="avatar" class="w-100 h-100" />
                             </div>
