fix: content overflow issue

--- a/documentation/index.html
+++ b/documentation/index.html
@@ -184,7 +184,7 @@
 
                     <!-- letter avatar -->
                     <p class="mt-2">Letter avatars, put your initials of your name.</p>
-                    <div class="snippet rounded-sm p-3 text-center my-1 border">
+                    <div class="snippet rounded-sm p-3 flex-row content-center wrap my-1 border">
                         <div class="flex-row items-end content-center">
                             <div class="letter-avatar avatar-xs white flex-row flex-center rounded-full mr-2">
                                 RM
@@ -228,7 +228,7 @@
                     </div>
 
                     <p class="mt-2">Badges with numbers on them.</p>
-                    <div class="snippet rounded-sm p-3 text-center my-2 border">
+                    <div class="snippet rounded-sm p-3 flex-row content-center wrap my-2 border">
                         <i class="fa fa-envelope badge-icon relative mr-4">
                             <span class="badge blue-badge">4</span>
                         </i>
@@ -258,7 +258,7 @@
                     </div>
 
                     <p class="mt-2">Badges without numbers.</p>
-                    <div class="snippet rounded-sm p-3 text-center my-2 border">
+                    <div class="snippet rounded-sm p-3 flex-row content-center wrap my-2 border">
                         <i class="fa fa-envelope badge-icon relative mr-4">
                             <span class="badge blue-badge badge-sm"></span>
                         </i>
@@ -345,7 +345,7 @@
                             <code>btn-outlined</code>
                         </p>
                     </div>
-                    <div class="snippet rounded-sm p-3 flex-row content-center my-2 border">
+                    <div class="snippet rounded-sm p-3 flex-row content-center wrap my-2 border">
                         <button class="btn-primary m-2 font-semibold py-1 px-3 rounded-sm transition-3">
                             Primary
                         </button>
@@ -386,7 +386,7 @@
                     </div>
                     <!-- icon buttons -->
                     <p class="mt-2">Icon buttons, for example for shopping cart.</p>
-                    <div class="snippet rounded-sm p-3 flex-row content-center my-2 border">
+                    <div class="snippet rounded-sm p-3 flex-row content-center wrap my-2 border">
                         <button
                             class="m-2 btn-primary py-1 px-2 font-semibold rounded-sm flex-row items-center transition-3">
                             <i class="fa fa-thumbs-o-up btn-icon mr-1"></i>Like
