feat: add documentation for typography

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <main class="home spacing flex-row flex-center w-screen-100 m-auto">
         <div class="text-center mx-6">
-            <h1 class="text-xlg mb-5 invert font-black">Polaroid</h1>
+            <h1 class="text-2xl mb-5 invert font-black">Polaroid</h1>
             <h3>Build fast and elegant user interfaces.</h3>
             <h3>Polaroid a component library for faster development.</h3>
             <div class="mt-4 p-1">
