feat: add documentation for lists

--- a/documentation/index.html
+++ b/documentation/index.html
@@ -67,6 +67,9 @@
                     <a href="#input">Input</a>
                 </li>
                 <li class="py-1 px-2 m-1 ml-4 list-item">
+                    <a href="#input">Lists</a>
+                </li>
+                <li class="py-1 px-2 m-1 ml-4 list-item">
                     <a href="#input">Typography</a>
                 </li>
             </ul>
@@ -708,7 +711,7 @@
                     <div class="my-3 snippet">
                         <iframe
                             src="https://carbon.now.sh/embed?bg=rgba%28250%2C250%2C250%2C1%29&t=material&wt=sharp&l=htmlmixed&width=977&ds=false&dsyoff=20px&dsblur=0px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Fira+Code&fs=14px&lh=136%25&si=false&es=2x&wm=false&code=%253Cp%2520class%253D%2522font-black%2522%253EThis%2520is%2520dummy%2520text%253C%252Fp%253E%250A%253Cp%2520class%253D%2522font-bold%2522%253EThis%2520is%2520dummy%2520text%253C%252Fp%253E%250A%253Cp%2520class%253D%2522font-semibold%2522%253EThis%2520is%2520dummy%2520text%253C%252Fp%253E%250A%253Cp%2520class%253D%2522font-regular%2522%253EThis%2520is%2520dummy%2520text%253C%252Fp%253E%250A%253Cp%2520class%253D%2522font-light%2522%253EThis%2520is%2520dummy%2520text%253C%252Fp%253E%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520"
-                            style="width: 1024px; height: 171px; border:0; transform: scale(1); overflow:hidden;"
+                            style="height: 171px; border:0; transform: scale(1); overflow:hidden;"
                             sandbox="allow-scripts allow-same-origin">
                         </iframe>
                     </div>
@@ -752,9 +755,86 @@
                     </div>
                 </article>
             </section>
-            <footer class="mt-2 p-2 text-center">
-                <p>Made with ❤ by Rohan Mathur.</p>
-            </footer>
+
+
+            <!-- lists -->
+            <section id="lists">
+                <article>
+                    <div>
+                        <h2 class="font-black my-2">Lists</h2>
+                        <p>
+                            List for use for listing elements example contact list.
+                        </p>
+                        <p>Spaced list or normal list</p>
+                    </div>
+                    <!-- spaced list -->
+                    <div class="snippet rounded-sm p-3 flex-column flex-center wrap my-1 border">
+                        <ul class="list">
+                            <li class="p-1 border-b-1 text-base">First item</li>
+                            <li class="p-1 border-b-1 text-base">Second item</li>
+                            <li class="p-1 border-b-1 text-base">Third item</li>
+                        </ul>
+                    </div>
+                    <div class="my-3 snippet">
+                        <iframe
+                            src="https://carbon.now.sh/embed?bg=rgba%28250%2C250%2C250%2C1%29&t=material&wt=sharp&l=htmlmixed&width=977&ds=false&dsyoff=20px&dsblur=0px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Fira+Code&fs=14px&lh=136%25&si=false&es=2x&wm=false&code=%253Cul%2520class%253D%2522list%2522%253E%250A%2520%2520%253Cli%2520class%253D%2522p-1%2520border-b-1%2520text-base%2522%253EFirst%2520item%253C%252Fli%253E%250A%2520%2520%253Cli%2520class%253D%2522p-1%2520border-b-1%2520text-base%2522%253ESecond%2520item%253C%252Fli%253E%250A%2520%2520%253Cli%2520class%253D%2522p-1%2520border-b-1%2520text-base%2522%253EThird%2520item%253C%252Fli%253E%250A%253C%252Ful%253E%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520"
+                            style="height: 171px; border:0; transform: scale(1); overflow:hidden;"
+                            sandbox="allow-scripts allow-same-origin">
+                        </iframe>
+                    </div>
+
+                    <!-- stacked list -->
+                    <p>
+                        Stacked list.
+                    </p>
+                    <div class="snippet rounded-sm p-3 flex-column flex-center wrap my-1 border">
+                        <ul class="list">
+                            <li class="p-1 border-b-1">
+                                <div class="w-100 flex-row items-center">
+                                    <img class="list-avatar rounded-full mr-1" src="../assets/avatar.png"
+                                        alt="avatar" />
+                                    <div>
+                                        <p class="font-semibold">Person name</p>
+                                        <p class="dark-gray">first.last@example.com</p>
+                                    </div>
+                                </div>
+
+                            </li>
+                            <li class="p-1 border-b-1">
+                                <div class="w-100 flex-row items-center">
+                                    <img class="list-avatar rounded-full mr-1" src="../assets/avatar.png"
+                                        alt="avatar" />
+                                    <div>
+                                        <p class="font-semibold">Person name</p>
+                                        <p class="dark-gray">first.last@example.com</p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="p-1 border-b-1">
+                                <div class="w-100 flex-row items-center">
+                                    <img class="list-avatar rounded-full mr-1" src="../assets/avatar.png"
+                                        alt="avatar" />
+                                    <div>
+                                        <p class="font-semibold">Person name</p>
+                                        <p class="dark-gray">first.last@example.com</p>
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="my-3 snippet">
+                        <iframe
+                            src="https://carbon.now.sh/embed?bg=rgba%28250%2C250%2C250%2C1%29&t=material&wt=sharp&l=htmlmixed&width=977&ds=false&dsyoff=20px&dsblur=0px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Fira+Code&fs=14px&lh=136%25&si=false&es=2x&wm=false&code=%253Cul%2520class%253D%2522list%2522%253E%250A%2520%2520%2520%2520%253Cli%2520class%253D%2522p-1%2520border-b-1%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522w-100%2520flex-row%2520items-center%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cimg%2520class%253D%2522list-avatar%2520rounded-full%2520mr-1%2522%2520src%253D%2522..%252Fassets%252Favatar.png%2522%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520alt%253D%2522avatar%2522%2520%252F%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cp%2520class%253D%2522font-semibold%2522%253EPerson%2520name%253C%252Fp%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cp%2520class%253D%2522dark-gray%2522%253Efirst.last%2540example.com%253C%252Fp%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%2520%2520%2520%253C%252Fli%253E%250A%2520%2520%2520%2520%253Cli%2520class%253D%2522p-1%2520border-b-1%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522w-100%2520flex-row%2520items-center%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cimg%2520class%253D%2522list-avatar%2520rounded-full%2520mr-1%2522%2520src%253D%2522..%252Fassets%252Favatar.png%2522%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520alt%253D%2522avatar%2522%2520%252F%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cp%2520class%253D%2522font-semibold%2522%253EPerson%2520name%253C%252Fp%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cp%2520class%253D%2522dark-gray%2522%253Efirst.last%2540example.com%253C%252Fp%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%2520%2520%2520%253C%252Fli%253E%250A%2520%2520%253C%252Ful%253E%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520"
+                            style="height: 495px; border:0; transform: scale(1); overflow:hidden;"
+                            sandbox="allow-scripts allow-same-origin">
+                        </iframe>
+                    </div>
+
+
+
+                    <footer class="mt-2 p-2 text-center">
+                        <p>Made with ❤ by Rohan Mathur.</p>
+                    </footer>
         </main>
     </div>
     <script src="./sidebar.js"></script>
