fix: closing tag issue fix for section

--- a/documentation/index.html
+++ b/documentation/index.html
@@ -829,12 +829,11 @@
                             sandbox="allow-scripts allow-same-origin">
                         </iframe>
                     </div>
-
-
-
-                    <footer class="mt-2 p-2 text-center">
-                        <p>Made with ❤ by Rohan Mathur.</p>
-                    </footer>
+                </article>
+            </section>
+            <footer class="mt-2 p-2 text-center">
+                <p>Made with ❤ by Rohan Mathur.</p>
+            </footer>
         </main>
     </div>
     <script src="./sidebar.js"></script>
